--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint src"
+    "lint": "eslint src/"
   },
   "eslintConfig": {
     "extends": "react-app"
